--- a/index.html
+++ b/index.html
@@ -14,14 +14,6 @@
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
 		/>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-		<script type="importmap">
-			{
-				"imports": {
-					"ass-compiler": "https://cdn.jsdelivr.net/npm/ass-compiler@0.1.15/+esm"
-				}
-			}
-		</script>
 		<script type="module" src="./src/main.js"></script>
 	</head>
 	<body class="bg-black">
@@ -113,15 +105,6 @@
 					</div>
 				</details>
 
-				<!-- 오디오 플레이어 -->
-				<div class="mb-2">
-					<audio
-						id="audioPlayer"
-						controls
-						class="d-block w-100"
-					></audio>
-				</div>
-
 				<!-- 파일 업로드 영역 -->
 				<div class="mb-4">
 					<div class="mb-3">
@@ -177,5 +160,7 @@
 				</div>
 			</div>
 		</details>
+		<!-- 오디오 플레이어 -->
+		<audio id="audioPlayer" controls></audio>
 	</body>
 </html>
