--- a/index.html
+++ b/index.html
@@ -122,6 +122,23 @@
 								조종하세요.)
 							</p>
 						</div>
+						<div class="col-md-4">
+							<div class="form-check">
+								
+								<label
+									class="form-check-label"
+									for="toggleBgKaraokeLine"
+								>
+									가사 배경 색 적용 여부
+								</label>
+								<input
+									class="form-check-input"
+									type="checkbox"
+									id="toggleBgKaraokeLine"
+									checked
+								/>
+							</div>
+						</div>
 					</div>
 				</details>
 				<!-- 파일 업로드 영역 -->
